--- a/css/desktop.css
+++ b/css/desktop.css
@@ -2,12 +2,10 @@
 
 header {
     padding: 20px 100px;
-
     .wrapper {
         display: flex;
         justify-content: space-between;
         width: 100%;
-
         .header-home {
             display: flex;
             align-items: center;
@@ -30,7 +28,10 @@ header {
         .main-nav {
             display: flex;
 
-            .horizontal-list {
+            .link-list {
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
                 li {
                     margin-left: 40px;
 
@@ -54,7 +55,6 @@ header {
 
         .icon-nav {
             display: flex;
-
             .horizontal-list {
                 li {
                     margin-left: 10px;
@@ -62,6 +62,50 @@ header {
                     img {
                         width: 17px;
                         margin-right: 10px;
+                    }
+                }
+                li.menu {
+                    position: relative;
+                    display: none;
+                    flex-direction: column;
+        
+                    label {
+                        cursor: pointer;
+                        z-index: 2;
+                        position: relative;
+                    }
+        
+                    .menu-toggle {
+                        display: none;
+                        &:checked + .toggle-nav {
+                            display: flex;
+                        }
+                    }
+        
+                    .toggle-nav {
+                        display: none;
+                        flex-direction: column;
+                        position: absolute;
+                        top: 120%;
+                        right: 0;
+                        background-color: #fff;
+                        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                        z-index: 1;
+                        .link-list {
+                            list-style: none;
+                            padding: 0;
+                            margin: 0;
+                            li {
+                                margin-left: 0;
+                                a {
+                                    text-decoration: none;
+                                    color: #333;
+                                    font-size: 16px;
+                                    padding: 10px;
+                                    display: block;
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -817,15 +861,14 @@ main {
 
 footer {
     background-image: url(../assets/background-blurr.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 60px 0 20px;
-
     color: var(--default-grey);
-
     .wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
-
         .footer-contents {
             display: grid;
             grid-template-columns: 1fr 1fr 0.5fr 0.5fr;
@@ -846,15 +889,12 @@ footer {
             .content {
                 h3 {
                     margin-bottom: 20px;
-
                     font-size: 20px;
                     font-weight: bold;
                 }
-
                 li {
                     color: var(--default-grey);
                 }
-
                 .contact-info {
                     li {
                         display: flex;
