--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,29 +3,36 @@
         padding: 20px 20px;
     }
 
-    .container {
-        .wrapper {
-            h1 {
-                font-size: 90px;
-            }
-            h2 {
-                font-size: 30px;
-            }
-        
-            h3 {
-                padding: 10px;
-                font-size: 20px;
-            }
-            p {
-                font-size: 18px;
-                color: #333;
-            }
-        }
-    }
     
+
     footer {
         padding: 20px 20px;
     }
     /* 404 error */
-
+    .error-container {
+        .wrapper {
+            .dots {
+                margin-bottom: -5vh; 
+                .dot {
+                    width: 5vw; 
+                    height: 5vw; 
+                }
+            }
+            h1 {
+                font-size: 9vw;
+            }
+            h2 {
+                font-size: 3vw; 
+            }
+        
+            h3 {
+                padding: 1vh; 
+                font-size: 2vw;
+            }
+            p {
+                font-size: 1.8vw; 
+                color: #333;
+            }
+        }
+    }
 }
