--- a/css/tablet.css
+++ b/css/tablet.css
@@ -28,7 +28,7 @@
         }
     }
     main {
-        .home-section-1 {
+        .hero-section {
             .home-main-top {
                 .wrapper {
                     width: 100%;
