--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,6 @@
 @media screen and (max-width : 480px){
     header {
-        padding: 20px 20px;
+        padding: 20px 10px;
         .wrapper {
             .header-home {
                 font-size: 1.2rem;
@@ -12,16 +12,18 @@
         }
     }
     main {
-        .home-section-1 {
+        .hero-section {
             .home-main-top {
                 background-image: none;
                 .wrapper {
                     .background-img {
                         .vectors {
                             .vector5 {
-                                left: 288px;
+                                width: 40px;
+                                left: 273px;
                             }
                             .vector4 {
+                                width: 30px;
                                 left: 260px;
                             }
                         }
@@ -29,6 +31,7 @@
                             h1 {
                                 font-size: 4rem;
                                 color: white;
+                                padding-left: 0;
                             }
                             .main-story {
                                 margin-top: 230px;
@@ -65,6 +68,11 @@
                     display: none;
                 }
             }
+        }
+
+        /*top button style*/
+        .top-button {
+            bottom: 40px;
         }
     }
     
