--- a/css/desktop.css
+++ b/css/desktop.css
@@ -115,7 +115,7 @@ header {
 }
 
 main {
-    .hero-section {
+    .home-section-1 {
         .home-main-top {
             background-image: url("../assets/Vector1.png");
             background-repeat: no-repeat;
@@ -427,7 +427,8 @@ main {
                 justify-content: center;
                 align-items: center;
                 background: rgb(156, 156, 243);
-                width: 30px;
+                min-width: 30px;
+                min-height: 30px;
                 margin: 0 30px 0px 5px;
                 border-radius: 10px;
 
